# HaskellFractals

./: README.md
Main.hs/: CHANGELOG.md  Main.hs.cabal
Main.hs/app/: Main
Main.hs/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
