cabal-version:   3.0
name:            Main-hs
version:         0.1.0.0
license:         NONE
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable Main-hs
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >=4.17 && <5, gloss
    hs-source-dirs:   app
    default-language: Haskell2010
